Qtile x.x.x, released xxxx-xx-xx:
    * features
        - Add `lazy.window.center()` command to center a floating window on the screen.
    * bugfixes
        - Fix `Systray` crash on `reconfigure_screens`.

Qtile 0.20.0, released 2022-01-24:
    * features
        - Add `place_right` option in the TreeTab layout to place the tab panel on the right side
        - X11: Add support for _NET_DESKTOP_VIEWPORT. E.g. can be used by rofi to map on current output.
        - Wayland: Bump wlroots version. 0.15.x wlroots and 0.15.2+ pywlroots are required.
        - Add XWayland support to the Wayland backend. XWayland will start up as needed, if it is installed.
    * bugfixes
        - Remove non-commandable windows from IPC. Fixes bug where IPC would fail when trying to get info
          on all windows but Systray has icons (which are non-commandable `_Window`s.)
        - Fix bug where bars were not reconfigured correctly when screen layout changes.
        - Fix a Wayland bug where layer-shell surface like dunst would freeze up and stop updating.
        - Change timing of `screens_reconfigured` hook. Will now be called ONLY if `cmd_reconfigure_screens`
          has been called and completed.
        - Fix order of icons in Systray widget when restarting/reloading config.
        - Fix rounding error in PulseVolume widget's reported volume.
        - Fix bug where Volume widget did not load images where `theme_path` had been set in `widget_defaults`.
        - Remove ability to have multiple `Systray` widgets. Additional `Systray` widgets will result in a
          ConfigError.
        - Release notification name from dbus when finalising `Notify` widget. This allows other notification
          managers to request the name.
        - Fix bug where `Battery` widget did not retrieve `background` from `widget_defaults`.
        - Fix bug where widgets in a `WidgetBox` are rendered on top of bar borders.

Qtile 0.19.0, released 2021-12-22:
    * features